--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,8 @@ body {
 header {
   background-color: #344c9c; }
   header .logo {
-    text-align: left; }
+    text-align: left;
+    align-items: center; }
   header .img_logo {
     width: 80px; }
   header h1 {
@@ -38,7 +39,7 @@ header {
         border-radius: 8px;
         font-weight: bold; }
 
-@media (max-width: 411px) {
+@media (max-width: 420px) {
   .menu {
     display: flex;
     flex-direction: column;
@@ -63,10 +64,25 @@ footer {
     footer .logo_redes .logo_ig {
       width: 60px; }
 
+h1 {
+  padding: 20px;
+  text-align: center;
+  font-size: 3rem;
+  color: black; }
+
+h3 {
+  padding: 10px;
+  text-align: center;
+  font-size: 22px;
+  color: black; }
+
+.card {
+  width: 30rem;
+  padding: 20px; }
+
 .container_servicios {
   background-color: white;
   width: 90%;
-  height: 900px;
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
@@ -77,7 +93,7 @@ footer {
   gap: 50px;
   padding: 5%; }
 
-@media (max-width: 411px) {
+@media (max-width: 420px) {
   .container_servicios {
     display: flex;
     flex-direction: column; } }
